--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "i": "^0.3.7",
     "morgan": "^1.10.0",
+    "npm": "^9.7.1",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
