--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --cls src/index.ts",
     "tsc": "tsc"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "@types/morgan": "^1.9.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "i": "^0.3.7",
     "morgan": "^1.10.0",
@@ -24,6 +25,8 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "instagram-private-api": "^1.45.3",
     "tsc": "^2.0.4"
   }
 }
